# ical-org

./: LICENSE  ical-org.cabal  stack.yaml
src/: Main.hs  Org.hs
