name:                ical-org
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/asg0451/ical-org#readme
license:             BSD3
license-file:        LICENSE
author:              Miles Frankel
maintainer:          miles.frankel@gmail.com
copyright:           Copyright: (c) 2016 Miles Frankel
category:            Unknown
build-type:          Simple
cabal-version:       >=1.10

executable ical-org
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Org
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , iCalendar
                     , bytestring
                     , data-default
                     , containers
                     , time
                     , text
                     , safe
